kubernetes/apps/openldap/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
  namespace: openldap
spec:
  replicas: 1
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 64Mi
  template:
    spec:
      containers:
        - name: openldap
          image: osixia/openldap:latest
          volumeMounts:
            - mountPath: /container/service/slapd/assets/certs
              subPath: certificates
              name: data
            - mountPath: /var/lib/ldap
              subPath: slapd/database
              name: data
            - mountPath: /etc/ldap/slapd.d
              subPath: slapd/config
              name: data
        - name: phpldapadmin
          image: osixia/phpldapadmin:latest
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
